@@ -1,20 +1,22 @@
 ;; Module for GDBM / CLISP
 ;; <http://www.gnu.org/gdbm/>
 ;; Copyright (C) 2007  Masayuki Onjo <onjo@lispuser.net>
-;; Copyright (C) 2007-2008  Sam Steingold <sds@gnu.org>
+;; Copyright (C) 2007-2008, 2018  Sam Steingold <sds@gnu.org>
 ;; This is Free Software, distributed under the GNU GPL v2+
+
+;; make sure there are no FFI forms in this file,
+;; otherwise gdbm.c will get overwritten on compilation.
 
 (defpackage #:gdbm
   (:documentation
    "GDBM - The GNU database manager - <http://www.gnu.org/software/gdbm/>")
   (:use #:lisp)
-  (:export #:gdbm #:gdbm-p #:gdbm-error #:gdbm-version
-           #:gdbm-path #:gdbm-default-key-type #:gdbm-default-value-type
+  (:export #:gdbm #:gdbm-p #:gdbm-error #:gdbm-version #:gdbm-path
            #:gdbm-error-message #:gdbm-error-code
            #:gdbm-open #:gdbm-open-p #:gdbm-close #:do-db #:with-open-db
            #:gdbm-store #:gdbm-fetch #:gdbm-delete #:gdbm-exists
            #:gdbm-firstkey #:gdbm-nextkey #:gdbm-file-size
-           #:gdbm-reorganize #:gdbm-sync #:gdbm-setopt #:gdbm-count))
+           #:gdbm-reorganize #:gdbm-sync #:gdbm-opt #:gdbm-count))
 (in-package "GDBM")
 
 (pushnew :gdbm *features*)
@@ -28,6 +30,8 @@
   path
   key-type
   value-type)
+
+(defsetf gdbm-opt %set-gdbm-opt)
 
 (defun gdbm-open-p (gdbm) (not (null (gdbm-dbf gdbm))))
 
