@@ -14,7 +14,7 @@
  <varlistentry id="gdbm-version"><term><code>(GDBM:GDBM-VERSION)</code></term>
   <listitem><para>Return the version string.</para></listitem></varlistentry>
  <varlistentry id="gdbm-open"><term><code>(GDBM:GDBM-OPEN &filename-r;
-    &key-amp; :BLOCKSIZE :READ-WRITE :FAST :SYNC :NOLOCK :NOMMAP :CLOEXEC :BSEXACT
+    &key-amp; :BLOCKSIZE :READ-WRITE :OPTIONS
     :MODE :DEFAULT-KEY-TYPE :DEFAULT-VALUE-TYPE)</code></term>
   <listitem><para>Open &filename-r; database file.
     The return value is a <type>GDBM</type> structure.
@@ -23,6 +23,18 @@
      <member><constant>:WRCREAT</constant></member>
      <member><constant>:NEWDB</constant></member>
    </simplelist></para>
+   <para><constant>:OPTIONS</constant> is a combination of <simplelist>
+   <member><constant>:FAST</constant></member>
+   <member><constant>:SYNC</constant></member>
+   <member><constant>:NOLOCK</constant></member>
+   <member><constant>:NOMMAP</constant></member>
+   <member><constant>:CLOEXEC</constant></member>
+   <member><constant>:BSEXACT</constant></member>
+   </simplelist></para>
+   <para><constant>:MODE</constant> is the numeric file permission mode
+   (cf. <function role="unix">open</function>), use
+   <link linkend="convert-mode"><function>POSIX:CONVERT-MODE</function></link>
+   to extract it from a list of keywords.</para>
    <para>&clisp; can store and retrieve values of the
     following types:<simplelist><member>&string-t;</member>
      <member>&vector-t; (meaning anything that can be &coerce;d to
@@ -32,7 +44,7 @@
      <member>&integer-t;</member><member>&single-float-t;</member>
      <member>&double-float-t;</member></simplelist>
     and <constant>:DEFAULT-KEY-TYPE</constant>
-    and <constant>:DEFAULT-VALUE-TYPE-TYPE</constant> should be one of
+    and <constant>:DEFAULT-VALUE-TYPE</constant> should be one of
     those.  If not specified (or &nil;), the &type-k;
     argument is required in the access functions below.</para>
    <para>If &filename-r; is actually an existing <type>GDBM</type> structure,
@@ -40,10 +52,9 @@
    <para>The return value is &finalize;d with
     <link linkend="gdbm-close"><function>GDBM-CLOSE</function></link>.</para>
  </listitem></varlistentry>
- <varlistentry id="gdbm-default-types">
-  <term><code>(GDBM:GDBM-DEFAULT-KEY-TYPE &db-r;)</code></term>
-  <term><code>(GDBM:GDBM-DEFAULT-VALUE-TYPE &db-r;)</code></term>
-  <listitem><para>Return the default data conversion types.</para>
+ <varlistentry id="gdbm-path">
+  <term><code>(GDBM:GDBM-PATH &db-r;)</code></term>
+  <listitem><para>Return the original &filename-r; passed to .</para>
  </listitem></varlistentry>
  <varlistentry id="gdbm-close">
   <term><code>(GDBM:GDBM-CLOSE &db-r;)</code></term>
@@ -59,8 +70,7 @@
   <term><code>(GDBM:GDBM-STORE &db-r; &key-r; &cont-r; &key-amp;
     :FLAG)</code></term>
   <listitem><para>&db-r; is the <type>GDBM</type> structure returned by
-    <link linkend="gdbm-open"><function>GDBM-OPEN</function></link>.
-    &key-r; is the key datum.
+    &gdbm-open;. &key-r; is the key datum.
     &cont-r; is the data to be associated with the key.
     <constant>:FLAG</constant> can have one of following values:
     <simplelist><member><constant>:INSERT</constant></member>
@@ -68,7 +78,7 @@
  </para></listitem></varlistentry>
  <varlistentry id="gdbm-fetch">
   <term><code>(GDBM:GDBM-FETCH &db-r; &key-r; &key-amp;
-    (TYPE (GDBM:GDBM-DEFAULT-VALUE-TYPE &db-r;)))</code></term>
+    (TYPE (GDBM:GDBM-OPT &db-r; :DEFAULT-VALUE-TYPE)))</code></term>
   <listitem><simpara>Search the database.
     The &type-k; argument specifies the return type.
  </simpara></listitem></varlistentry>
@@ -82,13 +92,13 @@
  </simpara></listitem></varlistentry>
  <varlistentry id="gdbm-firstkey">
   <term><code>(GDBM:GDBM-FIRSTKEY &db-r; &key-amp;
-    (TYPE (GDBM:GDBM-DEFAULT-KEY-TYPE &db-r;)))</code></term>
+    (TYPE (GDBM:GDBM-OPT &db-r; :DEFAULT-KEY-TYPE)))</code></term>
   <listitem><simpara>Return the key of the first entry, as &type-k;.
     If the database has no entries, the return value is &nil;.
  </simpara></listitem></varlistentry>
  <varlistentry id="gdbm-nextkey">
   <term><code>(GDBM:GDBM-NEXTKEY &db-r; &key-r; &key-amp;
-    (TYPE (GDBM:GDBM-DEFAULT-KEY-TYPE &db-r;)))</code></term>
+    (TYPE (GDBM:GDBM-OPT &db-r; :DEFAULT-KEY-TYPE)))</code></term>
   <listitem><simpara>Return the key that follows &key-r;, as &type-k;,
     or &nil; if there are no further entries.
  </simpara></listitem></varlistentry>
@@ -100,27 +110,43 @@
   <term><code>(GDBM:GDBM-SYNC &db-r;)</code></term>
   <listitem><simpara>Syncronize the in-memory state of the database to
     the disk file.</simpara></listitem></varlistentry>
- <varlistentry id="gdbm-setopt">
-  <term><code>(GDBM:GDBM-SETOPT &db-r; &option-r; &value-r;)</code></term>
-  <listitem><para>Set options on an already open database.
+ <varlistentry id="gdbm-opt">
+  <term><code>(GDBM:GDBM-OPT &db-r; &option-r;)</code></term>
+  <term><code>(&setf; (GDBM:GDBM-OPT &db-r; &option-r;) &value-r;)</code></term>
+  <listitem><para>Set or retrieve options of an already open database.
     &option-r; is one of following:
     <variablelist>
+     <varlistentry><term><constant>:FLAGS</constant></term>
+      <listitem><simpara>Retrieve the <constant>:READ-WRITE</constant>
+      and <constant>:OPTIONS</constant> passed to &gdbm-open;
+      (read-only).</simpara></listitem></varlistentry>
      <varlistentry><term><constant>:CACHESIZE</constant></term>
-      <listitem><simpara>set the size of the internal bucket cache.
-        (default is 100)</simpara></listitem></varlistentry>
-     <varlistentry><term><constant>:FASTMODE</constant></term>
-      <listitem><simpara>&t; or &nil; (obsolete)
+      <listitem><simpara>Retrieve and set the size of the internal
+      bucket cache.</simpara></listitem></varlistentry>
+     <varlistentry><term><constant>:MAXMAPSIZE</constant></term>
+      <listitem><simpara>Retrieve and set the maximum size of a memory
+      mapped region.</simpara></listitem></varlistentry>
+     <varlistentry><term><constant>:BLOCKSIZE</constant></term>
+      <listitem><simpara>Retrieve the block size in bytes (read-only).
+     </simpara></listitem></varlistentry>
+     <varlistentry><term><constant>:MMAP</constant></term>
+      <listitem><simpara>Retrieve and enable or disable memory mapping mode.
      </simpara></listitem></varlistentry>
      <varlistentry><term><constant>:SYNCMODE</constant></term>
-      <listitem><simpara>&t; or &nil;</simpara></listitem></varlistentry>
+      <listitem><simpara>Retrieve or set file system synchronization mode.
+     </simpara></listitem></varlistentry>
      <varlistentry><term><constant>:CENTFREE</constant></term>
-      <listitem><simpara>&t; or &nil;</simpara></listitem></varlistentry>
+      <listitem><simpara>Retrieve or set central free block pool handling.
+     </simpara></listitem></varlistentry>
      <varlistentry><term><constant>:COALESCEBLKS</constant></term>
-      <listitem><simpara>&t; or &nil;</simpara></listitem></varlistentry>
+      <listitem><simpara>Retrieve or set free block merging.
+     </simpara></listitem></varlistentry>
+     <varlistentry><term><constant>:DBNAME</constant></term>
+      <listitem><simpara>Retrieve the namestring of the database (read-only).
+     </simpara></listitem></varlistentry>
      <varlistentry><term><constant>:DEFAULT-VALUE-TYPE</constant></term>
       <term><constant>:DEFAULT-KEY-TYPE</constant></term>
-      <listitem><simpara>see
-        <link linkend="gdbm-open"><function>GDBM-OPEN</function></link>
+      <listitem><simpara>The default data conversion types, see &gdbm-open;.
      </simpara></listitem></varlistentry>
  </variablelist></para></listitem></varlistentry>
  <varlistentry id="gdbm-file-size">
